# sales_assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  SPECS.md  TASKS.md  alembic.ini  main.py  pyproject.toml  specs.md
alembic/: env.py  url.py
alembic/versions/: 09cc73c39830_add_enum_prospect_status.py  0f4568d667e1_add_enum_types.py  277fcdf89b75_.py  4eb6dd6309d1_add_indexes_and_vector_tables.py  786fee35bdb7_update_db_with_outreachdraft_enum_type.py  79b596ca4cbc_fix_relationship_error_in_industry_.py  7ad88a02ed73_fix_indexes_and_vector_tables.py  9ed0cc74125e_.py
app/: main.py
app/api/: __init__.py  prospects.py
app/config/: __init__.py  settings.py
app/models/: __init__.py  api.py  database.py
app/services/: __init__.py  db_crud.py  db_vector_crud.py  vector_service.py
app/utils/: __init__.py  logging.py
data/seeds/: README.md  test_companies.csv  test_industries.csv  test_prospects.csv  test_solutions.csv
docs/: TASK 2.4 LEARNINGS.md  schema.md
scripts/: README.md  extract_ddl.py  load_seed_data.py  populate_vectors.py  verify_seed_data.py
tests/: conftest.py
tests/unit/services/: test_db_crud_company.py  test_db_crud_improved.py  test_db_crud_prospect_research.py  test_db_crud_remaining.py  test_db_crud_solution.py  test_db_vector_crud.py  test_vector_service.py
